--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -7,6 +7,7 @@ enum34==1.1.6
 Flask==0.12.1
 Flask-RESTful==0.3.5
 Flask-SQLAlchemy==2.2
+flask_cors
 ipython==5.3.0
 ipython-genutils==0.2.0
 itsdangerous==0.24
